[tool.poetry]
name = "repl_python3_disworld"
version = "0.1.0"
description = ""
authors = ["yaakiyu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
discord = "^1.7.3"
"dislash.py" = "^1.4.9"
jishaku = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
