[tool.poetry]
name = "repl_python3_disworld"
version = "0.1.0"
description = ""
authors = ["yaakiyu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.1"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
Flask = "^2.0.3"
orjson = "^3.6.7"
"discord.py" = "^2.0.1"
jishaku = "^2.5.1"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
